index / main / main > length completed

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,212 @@
-.App {
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300;1,400;1,500;1,700&display=swap");
+div.App {
+  width: 100%;
+  color: #474747;
+  font-family: "Roboto", sans-serif;
+}
+
+div.index {
+  background: linear-gradient(360deg, rgb(120, 160, 212) 0%, rgb(222, 236, 252) 60%, rgb(20, 38, 202) 100%);
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
   min-height: 100vh;
+  padding: 1rem;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
+div.index img.symbol-logo {
+  width: 70px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+div.index img.text-logo {
+  width: 140px;
+  margin-top: 0.5rem;
+}
+div.index p.intro {
+  max-width: 38ch;
+  font-size: 0.95rem;
+  font-weight: 400;
+}
+div.index button {
+  background: linear-gradient(90deg, rgb(120, 160, 212) 0%, rgb(20, 38, 202) 100%);
+  color: #fff;
+  border: none;
+  padding: 0.45rem 0.6rem;
+  border-radius: 15px;
+}
+div.index button:hover {
+  cursor: pointer;
+  background: linear-gradient(90deg, rgb(20, 38, 202) 0%, rgb(120, 160, 212) 100%);
+}
+@media (prefers-reduced-motion: no-preference) {
+  div.index .symbol-logo {
+    animation: logo-spin infinite 10s linear;
   }
-  to {
+}
+@keyframes logo-spin {
+  from {
     transform: rotate(360deg);
   }
+  to {
+    transform: rotate(0deg);
+  }
 }
+
+div.main {
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+div.main header {
+  background: linear-gradient(90deg, rgb(20, 38, 202) 0%, rgb(70, 141, 233) 100%);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 1rem;
+}
+div.main header div.topHeader {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+div.main header img.hambuger {
+  height: 18px;
+}
+div.main header ul.category {
+  display: flex;
+  margin-bottom: 0;
+  padding: 0;
+  justify-content: center;
+}
+div.main header ul.category li {
+  list-style-type: none;
+  padding: 0.25rem 1rem;
+  font-size: 0.8rem;
+  min-width: 3rem;
+  color: white;
+  text-align: center;
+  border-left: 1px solid #fff;
+  border-top: 1px solid #fff;
+  border-bottom: 1px solid #fff;
+}
+div.main header ul.category li:nth-of-type(1) {
+  border-top-left-radius: 8px;
+  border-bottom-left-radius: 8px;
+}
+div.main header ul.category li:nth-of-type(4) {
+  border-top-right-radius: 8px;
+  border-bottom-right-radius: 8px;
+  border-right: 1px solid #fff;
+}
+div.main header ul.category li.selected {
+  color: #2e6fe9;
+  background-color: #fff;
+}
+
+div.logoSet {
+  display: flex;
+  align-items: center;
+}
+div.logoSet img.main-symbol {
+  width: 25px;
+  animation: logo-spin infinite 10s linear;
+}
+div.logoSet img.main-text {
+  height: 20px;
+  margin-left: 0.5rem;
+}
+
+div.unitComponets {
+  padding: 1rem;
+  max-width: 500px;
+  margin: 0 auto;
+}
+div.unitComponets div.inputShow, div.unitComponets ul.otherUnits {
+  background-color: #ebebeb;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 1rem;
+  border-radius: 10px;
+}
+div.unitComponets span.eq {
+  font-size: 1.23rem;
+  font-weight: 800;
+  color: #2e6fe9;
+}
+div.unitComponets div.inputArea, div.unitComponets div.result {
+  display: flex;
+  border-radius: 20px;
+  background-color: #b2c6ec;
+}
+div.unitComponets select, div.unitComponets input {
+  border: none;
+  background: none;
+  height: 2rem;
+  color: #2e6fe9;
+}
+div.unitComponets select {
+  margin-left: 1rem;
+  margin-right: 1rem;
+  width: 60px;
+  text-align: center;
+  font-weight: 800;
+  color: #2e6fe9;
+  background-color: #b2c6ec;
+  border-radius: 20px;
+}
+div.unitComponets input {
+  width: 100%;
+  font-size: 1.5rem;
+  font-weight: 700;
+  text-align: center;
+  border-right: 1px solid #fff;
+}
+div.unitComponets div.inputArea {
+  margin-bottom: 0.5rem;
+}
+div.unitComponets div.result {
+  margin-top: 0.5rem;
+  background-color: #2e6fe9;
+}
+div.unitComponets div.result input {
+  color: #fff;
+}
+div.unitComponets div.result select {
+  background-color: #2e6fe9;
+  color: #fff;
+}
+div.unitComponets ul.otherUnits li.header {
+  width: 12ch;
+  height: 1.75rem;
+  border: none;
+  margin: 0 auto;
+  margin-bottom: 0.5rem;
+  color: #fff;
+  font-weight: 500;
+  background-color: #929292;
+  border-radius: 10px;
+  align-items: center;
+}
+div.unitComponets ul.otherUnits li {
+  padding: 0;
+  margin: 0.1rem auto;
+  width: 100%;
+  list-style-type: none;
+  border-bottom: 1px solid #9b9b9b;
+  display: flex;
+  justify-content: center;
+  font-size: 0.85rem;
+}
+div.unitComponets ul.otherUnits li span.units {
+  margin-left: 0.25rem;
+}
+
+@media screen and (min-width: 600px) {
+  header div.topHeader {
+    width: 600px;
+    margin: 0 auto;
+  }
+}/*# sourceMappingURL=App.css.map */
