--- a/src/App.scss
+++ b/src/App.scss
@@ -103,6 +103,9 @@ div.main{
           border-bottom-right-radius: 8px;
           border-right: 1px solid #fff;
         }
+        &:hover{
+          cursor: pointer;
+        }
       }
       li.selected{ // State Modified Class
         color:$keyText;
@@ -150,11 +153,14 @@ div.unitComponets{
     background: none;
     height: 2rem;
     color:$keyText;
+    &:focus{
+      outline: none;
+    }
   }
   select{
     margin-left: 1rem;
     margin-right: 1rem;
-    width: 60px;
+    width: 100px;
     text-align: center;
     font-weight: 800;
     color:$keyText;
